Added extra banner pics and random banner animation

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="main.css" />
-  <title>Week 4 - JavaScript en het DOM</title>
+  <title>Week 5 - Interacties en animaties</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
     <div class="overlay"></div>
     <figure><img class="logo" src="img/kebabkabouter_logo.png" alt="Logo van het restaurant: Kebab-Kabouter."></figure>
     <h1> Welkom op de website van Kebab-Kabouter! </h1>
-    <h3> *De lekkerste kebab, door de kleinste mensen* </h3>
+    <h3 id="sloganRandom">  </h3>
   </header>
   <main class="gerechtenlijst">
     <section class="filter_buttons">
